--- a/Task-1/style.css
+++ b/Task-1/style.css
@@ -14,7 +14,7 @@
 }
 .tweet{
     font-family:"Roboto";
-    text-align: center;
+    text-align: left;
     font-size:20px;
     margin-top: 14px;
     margin-bottom: 24px;
@@ -70,7 +70,7 @@
 }
 .icon{
     display:flex;
-    justify-content: center;
+    justify-content: left;
     width: 319px;
     height: 20px;
 
