--- a/Task-4/login.css
+++ b/Task-4/login.css
@@ -1,3 +1,4 @@
+
 html, body {
     margin: 0;
     padding: 0;background: #EEEEEE 0% 0% no-repeat padding-box;
@@ -26,14 +27,23 @@ html, body {
 
 .login{
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 40px;
     width: 488px;
     height: 550px;
     border-radius: 2px;
-    border-top: 5px solid #3AC7EC;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #FFFFFF;
     opacity: 1;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-top: 4px solid #3ac7ec;
+}
+.login-box{
+    width: 424px;
+    height: 450px;
 }
 
 .login-top{
@@ -46,7 +56,7 @@ html, body {
 }
 .login-txt{
     position: relative;
-    flex-wrap: wrap;
+    margin: 15px auto 30px ;
     font-family: 'Quicksand', sans-serif;
     font-size: 24px;
     font-weight: bold;
@@ -59,20 +69,184 @@ html, body {
 
 
 
+.radio-btn {
+    display: flex;
+    margin-left: 20px;
+  }
+  
+  .radio-label {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: medium;
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    cursor: pointer;
+  }
+  
+  .radio-input {
+    display: none;
+  }
+  
+  .radio-img {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+  }
+  
+  .radio-input:checked+ .radio-on {
+    display: inline;
+  }
+  
+  .radio-input:checked + .radio-off {
+    display: none;
+  }
+  
+
+.dropdown-container {
+    margin: 20px;
+  }
+  
+  .dropdown-container > label{
+    font-size: 12px;
+    color: #666666;
+    margin-right: 10px;
+    font-family: 'Quicksand', sans-serif;
+  }
+  
+  .dropdown {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding: 2px 0;
+  }
+  
+  .dropdown-select {
+    font-family: Quicksand, sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    color: #222222;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    flex: 1;
+  }
+  
+  .dropdown-icon {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+  }
+
+  
+.textbox {
+    position: relative;
+    margin-bottom: 10px;
+  }
+  
+  .textbox input[type="text"] {
+    font-family: "Quicksand", sans-serif;
+    font-size: 16px;
+    color: #666666;
+    width: 380px;
+    height: 25px;
+    border:none;
+    margin: 20px 20px 0px 20px;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+  }
+  
+  .textbox input[type="password"] {
+    font-family: "Quicksand", sans-serif;
+    font-size: 16px;
+    color: #666666;
+    width: 380px;
+    border:none;
+    margin: 15px 5px 0px 20px;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+  }
+  
+  .forgot-username{
+    text-align: right;
+  }
+  
+  .forgot-password-txt {
+    margin: 0px;
+    text-align: right;
+    font-family: "Quicksand", sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    width: 384px;
+    color: #1F7A54;
+  }
+  .forgot-password-txt > p{
+    margin: 0px;
+  }
+  
+  .remember-me{
+    display: flex;
+    margin: 20px 0px 0px 20px;
+    font-family: "Quicksand", sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    width: 384px;
+    color: #222222;
+    accent-color:#1F7A54 ;
+  }
+  
+  .remember-me >input{
+    align-items: center;
+  }
+
+  .login-end{
+    display: flex;
+    margin-top: 20px;
+  }
+  .login-btn{
+    margin: auto;
+    width: 216px;
+    height: 40px;
+    align-items: center;
+    background: #3FD28B 0% 0% no-repeat padding-box;
+    border-radius: 2px;
+    opacity: 1;
+    box-shadow: 0px 3px 5px #0000003D;
+    font-family: "Quicksand", sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    color: #1F2834;
+    border: none;
+    outline: none;
+  }
+
+  .about{
+    display: flex;
+    justify-content: center;
+    width: 130px;
+    height: 18px;
+    font-family: Quicksand, sans-serif;
+    font-size: 14px;
+    color: #1F7A54;
+    position: absolute
+
+  }
 /* --------footer css---------------- */
 
 
-.footer{
+.footer {
     display: flex;
     width: 100%;
     height: 40px;
     background-color: #E0E1E1;
     justify-content: center;
     align-items: center;
-    position: fixed;
+    position: fixed; 
     bottom: 0;
-
-}
+    left: 0;
+  }
 
 .footer-logo{
     width: 90px;
