--- a/Task-4/login.css
+++ b/Task-4/login.css
@@ -29,21 +29,22 @@ html, body {
     margin: 0 auto;
     margin-top: 40px;
     width: 488px;
-    height: 550px;
+    height: 500px;
     border-radius: 2px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #FFFFFF;
     opacity: 1;
     flex: 1;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
     border-top: 4px solid #3ac7ec;
 }
 .login-box{
     width: 424px;
-    height: 450px;
+    height: 350px;
+    position: relative;
+    top: -80px;
 }
 
 .login-top{
@@ -225,14 +226,24 @@ html, body {
   .about{
     display: flex;
     justify-content: center;
-    width: 130px;
+    align-items: center;
+    width: 150px;
     height: 18px;
     font-family: Quicksand, sans-serif;
     font-size: 14px;
+    font-weight: bold;
     color: #1F7A54;
-    position: absolute
+    position: absolute;
+    bottom: -55%;
+    right: 30%;
 
   }
+  .dif1{
+    width: 0px;
+    height: 24px;
+    border: 1px solid #0000001F;
+    margin: 10px;
+}
 /* --------footer css---------------- */
 
 
@@ -269,7 +280,7 @@ html, body {
     width: 0px;
     height: 24px;
     border: 1px solid #0000001F;
-    margin-left: 15px;
+    margin-left: 20px;
 }
 
 
