--- a/Task-1/style.css
+++ b/Task-1/style.css
@@ -1,77 +1,84 @@
-
-.uno{
-    display: flex;
-    gap: 14px;
-    width: 457px;
-    height: 138px;
-}
-.username{
-    font-weight: bold;
-    font-family:"Roboto";
-    font-size:20px;
-    text-emphasis-color: #000000;
-    
-}
-.tweet{
-    font-family:"Roboto";
-    text-align: left;
-    font-size:20px;
-    margin-top: 14px;
-    margin-bottom: 24px;
-    width: 319px;
-    font-weight: normal;
-    text-emphasis-color: #000000;
-    table-layout: auto;
-}
-.photo{
-    width: 130px;
-    height: 130px;
-    display: inline;
-    margin:4px ;
-    
+.uno {
+  display: flex;
+  gap: 14px;
+  width: 457px;
+  height: 138px;
 }
 
-.comment{
-    width: 20px;
-    height: 20px;
-    display: inline;
+.username {
+  font-weight: bold;
+  font-family: "Roboto";
+  font-size: 20px;
+  -webkit-text-emphasis-color: #000000;
+          text-emphasis-color: #000000;
 }
-.like{
-    width: 20px;
-    height: 20px;
-    display: inline;
-}
-.retweet{
-    width: 20px;
-    height: 20px;
-    display: inline;
-}
-.c_count{
-    margin: 0px 24px 0px 14px;
-    display: inline;
-    font-family:"Roboto";
-    font-size: 15px;
-}
-.t_count{
-    margin: 0px 24px 0px 14px;
-    display: inline;
-    font-family:"Roboto";
-    font-size: 15px;
-}
-.l_count{
-    margin: 0px 24px 0px 14px;
-    display: inline;
-    font-family:"Roboto";
-    font-size: 15px;
-}
-.content{
-    display: block;
 
+.tweet {
+  font-family: "Roboto";
+  text-align: left;
+  font-size: 20px;
+  margin-top: 14px;
+  margin-bottom: 24px;
+  width: 319px;
+  font-weight: normal;
+  -webkit-text-emphasis-color: #000000;
+          text-emphasis-color: #000000;
+  table-layout: auto;
 }
-.icon{
-    display:flex;
-    justify-content: left;
-    width: 319px;
-    height: 20px;
 
+.photo {
+  width: 130px;
+  height: 130px;
+  display: inline;
+  margin: 4px;
 }
+
+.comment {
+  width: 20px;
+  height: 20px;
+  display: inline;
+}
+
+.like {
+  width: 20px;
+  height: 20px;
+  display: inline;
+}
+
+.retweet {
+  width: 20px;
+  height: 20px;
+  display: inline;
+}
+
+.c_count {
+  margin: 0px 24px 0px 14px;
+  display: inline;
+  font-family: "Roboto";
+  font-size: 15px;
+}
+
+.t_count {
+  margin: 0px 24px 0px 14px;
+  display: inline;
+  font-family: "Roboto";
+  font-size: 15px;
+}
+
+.l_count {
+  margin: 0px 24px 0px 14px;
+  display: inline;
+  font-family: "Roboto";
+  font-size: 15px;
+}
+
+.content {
+  display: block;
+}
+
+.icon {
+  display: flex;
+  justify-content: left;
+  width: 319px;
+  height: 20px;
+}/*# sourceMappingURL=style.css.map */
